--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tik Tak Toe</h1>
+    <div class="msg-container">
+        <p id="msg">Winner</p>
+        <button id="new-btn">New Game</button>
+    </div>
     <main>
+        <h1>Tik Tak Toe</h1>
+        <h2>GAME</h2>
         <div class="container">
             <div class="game">
                 <button class="box"></button>
@@ -24,6 +29,6 @@
         </div>
         <button id="reset-btn">Reset Game</button>
     </main>
-    
+    <script src="app.js"></script>
 </body>
 </html>
