--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <button id="new-btn">New Game</button>
     </div>
     <main>
-        <h1>Tik Tak Toe</h1>
-        <h2>GAME</h2>
+        <h1>Welcome to 'Tik Tak Toe' Game </h1>
+        <h4>Build by Prosenjit MOndol</h4>
         <div class="container">
             <div class="game">
                 <button class="box"></button>
