--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="new-btn">New Game</button>
     </div>
     <main>
-        <h1>Welcome to 'Tik Tak Toe' Game </h1>
+        <h1>Welcome to my 'Tik Tak Toe' Game. </h1>
         <h4>Build by Prosenjit MOndol</h4>
         <div class="container">
             <div class="game">
